pod1.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod1 
  labels: 
    app: demo
spec: 
  containers: 
  - name: nginx 
    image: nginx 
    ports: 
    - containerPort: 80
