pod2.yaml

apiVersion: v1
kind: Pod
metadata: 
  name: pod2
spec: 
  containers: 
  - name: busybox 
    image: busybox 
    # command: ['sh', '-c', 'sleep 3600']
